--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.18.0",
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.11",
+    "papaparse": "^4.6.3",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
     "vuetify": "^1.3.0",
@@ -19,7 +20,7 @@
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.1.1",
     "@vue/cli-plugin-eslint": "^3.1.5",
-    "@vue/cli-service": "^3.5.3",
+    "@vue/cli-service": "^3.6.0",
     "babel-eslint": "^10.0.1",
     "eslint": "^5.8.0",
     "eslint-plugin-vue": "^5.0.0-0",
