--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "babel-polyfill": "^6.26.0",
     "lodash": "^4.17.11",
     "papaparse": "^4.6.3",
+    "socket.io-client": "^2.2.0",
     "vue": "^2.5.17",
     "vue-router": "^3.0.2",
+    "vue-socket.io": "^3.0.7",
     "vuetify": "^1.3.0",
     "vuex": "^3.1.0"
   },
